@@ -6,6 +6,5 @@ package edu.colorado.phet.fractions.intro.intro.view;
  */
 public class Visualization {
     public static Visualization FRACTION = new Visualization();
-    public static Visualization NONE = new Visualization();
     public static Visualization MIXED = new Visualization();
 }
