@@ -1,3 +1,4 @@
+Changed "Reduced" and "Mixed" from radio buttons to checkboxes
 Made water glasses clickable
 Change the numerator when clicking anywhere in the number line
 # 0.00.23 (59585) Dec 21, 2011
